fix: filter menu overflowing

--- a/components/FilterMenu/FilterMenu.styles.scss
+++ b/components/FilterMenu/FilterMenu.styles.scss
@@ -32,6 +32,7 @@
   top: viewportSize(40);
   left: 0;
   height: 0;
+  width: fit-content;
   overflow: hidden;
   background-color: #ffffff;
   box-shadow: rgba(17, 17, 26, 0.1) 0 viewportSize(4) viewportSize(16), rgba(17, 17, 26, 0.05) 0 viewportSize(8) viewportSize(32);
